--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,16 @@
 body{
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(146, 143, 140);
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-.counter_container, .timer_container {
-    background-color: rgb(146, 143, 140);
+.counter_container, .timer_container{
+    background-color: rgb(160, 153, 153);
     margin: 30px;
     display: flex;
     flex-direction: column;
@@ -12,4 +19,18 @@ body{
     width: 200px;
     min-height: 200px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.buttons{
+    background-color: rgb(160, 153, 153);
+    margin: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    min-height: 100px;
+}
+button{
+    background-color: rgb(160, 153, 153);
 }
