--- a/styles/main.css
+++ b/styles/main.css
@@ -16,21 +16,23 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 200px;
-    min-height: 200px;
+    width: 400px;
+    min-height: 400px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
-.buttons{
+.counterButton{
     background-color: rgb(160, 153, 153);
-    margin: 15px;
-    display: flex;
-    flex-direction: row;
+    flex-direction: row; 
     justify-content: center;
     align-items: center;
-    width: 200px;
-    min-height: 100px;
+    display:flexbox;
 }
-button{
-    background-color: rgb(160, 153, 153);
+#counterParagraph{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    min-height: 100px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
