--- a/styles/main.css
+++ b/styles/main.css
@@ -21,14 +21,14 @@ body{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
 
-.counterButton{
+.counterButton,input{
     background-color: rgb(160, 153, 153);
     flex-direction: row; 
     justify-content: center;
     align-items: center;
     display:flexbox;
 }
-#counterParagraph{
+#counterParagraph,#timerParagraph{
     display: flex;
     justify-content: center;
     align-items: center;
